2004-07-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Bugfix: caret position of error messages in multiplot modes was
	wrong.
	
	* src/util.c (current_prompt): New variable holding the currently
	used prompt string.
	(PRINT_SPACES_UNDER_PROMPT): Use current_prompt instead of global
	PROMPT macro.  Use a pointer loop instead of a counter.
	(PRINT_SPACES_UNDER_PROMPT, PRINT_SPACES_UPTO_TOKEN): Enclosed
	macro body in do .. while(0).
	(os_error, int_error, int_warn): Use current_prompt instead of
	global macro PROMPT.

	* src/util.h (current_prompt): Declare.

	* src/command.h (PROMPT): Moved this global macro into command.c.

	* src/command.c (PROMPT): Moved macro to here.
	(read_line) [VMS]: Update new global variable current_prompt.
	(read_line) [!VMS]: Likewise.

2004-07-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Update the "Creator: " tag to report version as 4.0

2004-07-09  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm: Add a gsave/grestore pair to the fill operation
	used by pm3d surface quadrangles. This works around a ghostscript
	bug that introduces antialiasing artifacts when displaying in X11.

2004-07-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/fig.trm (FIG_arrow): Use actual linetype variables rather
	than those in FIG_line --- those are only set by FIG_vector, which
	isn't being called by FIG_arrow.

2004-07-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/unset.c (unset_mtics): Renamed to unset_minitics, for
	clarity.
	(unset_month_day_tics): New function, to implement 'unset xmtics'
	and friends.
	(unset_command): Change all calls of unset_mtics to the new name.
	Implement previously missing 'unset xmtics' and friends by calling
	new function.

2004-07-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c (parse_esc): Limit size of octal constants to 3 chars,
	possibly with a leading 0. This prevents consuming additional 